#### Don't forget to change the version number in configure.ac! ####

22 Aug 2003 Remove setpriority from execute_ccw_chain and instead
            move it directly into the device thread itself - Fish
22 Aug 2003 Add support for strlcpy/strlcat and use in httpserv.c
            (please use where possible instead of strncpy/strncat) - Fish
22 Aug 2003 Define default priorities for WIN32 / non-WIN32 - Fish
20 Aug 2003 Correct interval timer references and resolution - Mark L. Gaubatz
19 Aug 2003 Make devlist command immune from DEVBLK chain sequence - Fish
19 Aug 2003 Windows "double memory consumption" fix contributed by
            Mark D. (golden_dog98 [golden_dog98@yahoo.com]) - Fish
19 Aug 2003 Committed Jim Pierson's "-g -O2" optimization flags fix - Fish
19 Aug 2003 Fix dasdtab to provide correct model numbers for
            sense ID on 3340-1 (35M) and 3340-2 (70M) - Ivan Warren
19 Aug 2003 Removed W32 only symbol from linux build in ctcadpt - Ivan Warren
19 Aug 2003 Fixed nested lock issue in LCS freezing on Linux - Ivan Warren
19 Aug 2003 Fixed herc crash when "attach" CTCI with no parm - Jim Pierson
19 Aug 2003 Allow Write Record 0 after Write Home Address on CKDs
            problem initially reported by Jay Jaeger(cube1us) - Ivan Warren
18 Aug 2003 Re-instated fast dev lookup as a cache facility
            Thanks Fish for the suggestions - Ivan Warren
17 Aug 2003 Added HERCPRIO, DEVPRIO and TODPRIO - Mark L. Gaubatz
17 Aug 2003 Disabled Fast devnum & subchan lookup because of
            some incompatibilities / reported by yvangamache - Ivan Warren
16 Aug 2003 fix tt32stats command when OPTION_DYNAMIC_LOAD - Fish
16 Aug 2003 fix CTCI segfault caused by bug in build_config when
            OPTION_CONFIG_SYMBOLS specified - Fish
16 Aug 2003 fix 'make install-strip' issue with dyn devices identified
            by yvangamache [yvangamache@hotmail.com]  -- Fish
16 Aug 2003 copytape (hetupd.c), main (hetmap.c), het_read, het_write